css card alignment issue #1001

--- a/src/components/Post/index.css
+++ b/src/components/Post/index.css
@@ -63,7 +63,7 @@
 }
 
 .post__background {
-  min-height: 200px;
+  min-height: 350px;
   background: linear-gradient(
     130deg,
     #dee2ed,
